2010-05-02  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Include sys/types.h for pid_t.

2010-05-01  Zoltan Varga  <vargaz@gmail.com>

	* src/goutput.c (g_logv): Append a '\n' to the end of the string as glib does.

2010-04-28  Zoltan Varga  <vargaz@gmail.com>

	* configure.ac src/gspawn.c: Applied openbsd changes from Robert Nagy
	<robert@openbsd.org>.

2010-04-16  Miguel de Icaza  <miguel@novell.com>

	* src/gshell.c (g_shell_unquote): Implement this.

2010-04-25  Andreas Faerber  <andreas.faerber@web.de>

	* configure.ac: The iconv function may be libiconv_open.
	Fixes linking with GNU libiconv.

	Contributed under MIT/X11 license.

2010-04-23  Geoff Norton  <gnorton@novell.com>

	* configure.ac: The iconv function is iconv_open.

2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* src/glib.h: Rebase g_return_if_fail(), g_return_val_if_fail() in
	  terms of g_critical() instead of printf, and turn g_printerr() into
	  an actual function instead of a macro.
	* src/goutput.c: Add Android support, sending g_print(), g_printerr(),
	  and g_log() messages to the Android system log.

2010-04-16 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* test/ptrarray.c: new tests
	* src/gptrarray.c: implemented g_ptr_array_remove_fast().

2010-04-10  Andreas Faerber  <andreas.faerber@web.de>

	* configure.ac: Add checks for libm and libdl.
	* {src,test}/Makefile.am: Remove hardcoded library dependencies.
	Fixes compilation on Haiku.

	Contributed under MIT/X11 license.

2010-03-05  Zoltan Varga  <vargaz@gmail.com>

	* test/test.c (_GNU_SOURCE): Fix compilation if _GNU_SOURCE is already defined.


Thu Mar 4 16:34:37 CET 2010 Paolo Molaro <lupus@ximian.com>

	* src/unicode-data.h: save 70 KB.

Thu Mar 4 16:18:34 CET 2010 Paolo Molaro <lupus@ximian.com>

	* src/eglib-remap.h, src/glib.h: header file to remap the symbols
	so there is no clash with system glib.
	* src/Makefile.am: build static lib as well.

2010-03-04  Zoltan Varga  <vargaz@gmail.com>
